--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- SIT Nav using Bootstrap Nav Component-->
         <div class="sit-banner-container">
             <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-dark">
-                <div class="container-fluid">
+                <div class="container">
                     <a class="navbar-brand" href="#"><img src="img/logo.jpg" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                 </div>
               </nav>
               <div class="sit-banner">
-                <div class="container-fluid">
+                <div class="container">
                     <h3 class="text-uppercase">School of</h3>
                     <h1>Information Technology</h1>
                     <h4>Divine Word College of Calapan</h4>
@@ -53,7 +53,7 @@
         </div>
 
     <div class="sit-program" id="program">
-        <div class="container-fluid">
+        <div class="container">
             <h3 class="lead-head text-sm text-md">Program</h3>
             <h1 class="lead-body display-4">Bachelor of Science in Information Technology</h1>
 
@@ -74,7 +74,7 @@
     </div>
 
     <div class="mission-vision">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="mission col-12 col-sm-6">
                     <h1>Mission.</h1>
@@ -109,7 +109,7 @@
     </div>
 
     <div class="dean-faculty" id="faculty">
-        <div class="container-fluid">
+        <div class="container">
             <h3 class="lead-head">Faculty</h3>
             <h1 class="lead-body">Dean & Faculty Members</h1>
 
@@ -120,8 +120,8 @@
                             <div class="col-2"><img class="card-img-top rounded-circle" src="img/logo-c.jpg"></div>
                             <div class="col-10">
                                 <div class="card-body">
-                                  <h5 class="card-title">Lei M. Casiple</h5>
-                                  <hr style="border:1px solid white;border-bottom: none;">
+                                  <h5 class="card-title">Lei M. Casiple</h5><br>
+                                  <hr style="border:1px solid white;border-bottom: none;"><br>
                                   <p class="card-text">DEAN</p>
                                 </div>
                             </div>
@@ -153,8 +153,8 @@
                             <div class="col-2"><img class="card-img-top rounded-circle" src="img/logo-c.jpg"></div>
                             <div class="col-10">
                                 <div class="card-body">
-                                  <h5 class="card-title">Sheryll E. Grimaldo</h5>
-                                  <hr style="border:1px solid white;border-bottom: none;">
+                                  <h5 class="card-title">Sheryll E. Grimaldo</h5><br>
+                                  <hr style="border:1px solid white;border-bottom: none;"><br>
                                   <p class="card-text">FACULTY</p>
                                 </div>
                             </div>
@@ -188,8 +188,8 @@
                             <div class="col-2"><img class="card-img-top rounded-circle" src="img/logo-c.jpg"></div>
                             <div class="col-10">
                                 <div class="card-body">
-                                  <h5 class="card-title">Chenee A. Naluz</h5>
-                                  <hr style="border:1px solid white;border-bottom: none;">
+                                  <h5 class="card-title">Chenee A. Naluz</h5><br>
+                                  <hr style="border:1px solid white;border-bottom: none;"><br>
                                   <p class="card-text">FACULTY</p>
                                 </div>
                             </div>
@@ -222,8 +222,8 @@
                             <div class="col-2"><img class="card-img-top rounded-circle" src="img/logo-c.jpg"></div>
                             <div class="col-10">
                                 <div class="card-body">
-                                  <h5 class="card-title">Grace L. Navarro</h5>
-                                  <hr style="border:1px solid white;border-bottom: none;">
+                                  <h5 class="card-title">Grace L. Navarro</h5><br>
+                                  <hr style="border:1px solid white;border-bottom: none;"><br>
                                   <p class="card-text">FACULTY</p>
                                 </div>
                             </div>
@@ -253,7 +253,7 @@
     </div>
 
     <div class="equipment-facility">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6">
                     <h3 class="lead-head">Pictures</h3>
@@ -304,7 +304,7 @@
     </div>
 
     <div class="awards">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-md-8">
                     <i class="fa-solid fa-trophy"></i>
