adding images and further improvements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="sit-banner-container">
             <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="img/logo.jpg" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -47,7 +47,7 @@
                     <h1>Information Technology</h1>
                     <h4>Divine Word College of Calapan</h4>
                     <br>
-                    <a href="index.html" class="btn btn-light">More info <i class="fa fa-angles-right"></i></a>
+                    <a href="#vm" class="btn btn-light">More info <i class="fa fa-angles-right"></i></a>
                 </div>
               </div>
         </div>
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <div class="mission-vision">
+    <div class="mission-vision" id="vm">
         <div class="container-fluid">
             <div class="row">
                 <div class="mission col-12 col-sm-6">
@@ -117,7 +117,7 @@
                 <div class="col-12 col-md-6">
                     <div class="card">
                         <div class="one">
-                            <div class="col-2"><img class="card-img-top rounded-circle" src="img/logo-c.jpg"></div>
+                            <div class="col-2 faculty-img-casiple"></div>      
                             <div class="col-10">
                                 <div class="card-body">
                                   <h5 class="card-title">Lei M. Casiple</h5>
@@ -150,7 +150,7 @@
                 <div class="col-12 col-md-6">
                     <div class="card">
                         <div class="one">
-                            <div class="col-2"><img class="card-img-top rounded-circle" src="img/logo-c.jpg"></div>
+                            <div class="col-2 faculty-img-grimaldo"></div>
                             <div class="col-10">
                                 <div class="card-body">
                                   <h5 class="card-title">Sheryll E. Grimaldo</h5>
@@ -185,7 +185,7 @@
                 <div class="col-12 col-md-6">
                     <div class="card">
                         <div class="one">
-                            <div class="col-2"><img class="card-img-top rounded-circle" src="img/logo-c.jpg"></div>
+                            <div class="col-2 faculty-img-naluz"></div>
                             <div class="col-10">
                                 <div class="card-body">
                                   <h5 class="card-title">Chenee A. Naluz</h5>
@@ -219,7 +219,7 @@
                 <div class="col-12 col-md-6">
                     <div class="card">
                         <div class="one">
-                            <div class="col-2"><img class="card-img-top rounded-circle" src="img/logo-c.jpg"></div>
+                            <div class="col-2 faculty-img-navarro"></div>
                             <div class="col-10">
                                 <div class="card-body">
                                   <h5 class="card-title">Grace L. Navarro</h5>
@@ -332,7 +332,7 @@
     <div class="footer" id="contact">
         <div class="row">
             <div class="col-12 col-md-6 logo">
-                <img src="img/logo.jpg" alt="">
+                <a href="index.html"><img src="img/logo.jpg" alt=""></a>
                 <h5>SCHOOL OF INFORMATION TECHNOLOGY</h5>
             </div>
             <div class="col-12 col-md-6 contact">
