--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="col-12 col-md-6">
                     <div class="card">
                         <div class="one">
-                            <div class="col-2 faculty-img-casiple"></div>      
+                            <div class="col-2 faculty-img-casiple"><img src="img/mam-lei.jpg" alt=""></div>      
                             <div class="col-10">
                                 <div class="card-body">
                                   <h5 class="card-title">Lei M. Casiple</h5>
@@ -150,7 +150,7 @@
                 <div class="col-12 col-md-6">
                     <div class="card">
                         <div class="one">
-                            <div class="col-2 faculty-img-grimaldo"></div>
+                            <div class="col-2 faculty-img-grimaldo"><img src="img/mam-sheryll.jpg" alt=""></div>
                             <div class="col-10">
                                 <div class="card-body">
                                   <h5 class="card-title">Sheryll E. Grimaldo</h5>
@@ -185,7 +185,7 @@
                 <div class="col-12 col-md-6">
                     <div class="card">
                         <div class="one">
-                            <div class="col-2 faculty-img-naluz"></div>
+                            <div class="col-2 faculty-img-naluz"><img src="img/mam-chenee.jpg" alt=""></div>
                             <div class="col-10">
                                 <div class="card-body">
                                   <h5 class="card-title">Chenee A. Naluz</h5>
@@ -219,7 +219,7 @@
                 <div class="col-12 col-md-6">
                     <div class="card">
                         <div class="one">
-                            <div class="col-2 faculty-img-navarro"></div>
+                            <div class="col-2 faculty-img-navarro"><img src="img/mam-greys.jpg" alt=""></div>
                             <div class="col-10">
                                 <div class="card-body">
                                   <h5 class="card-title">Grace L. Navarro</h5>
