adding facilities link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                           <a class="nav-link" href="#faculty">Faculty</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#facility">Facilities</a>
+                          </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                           </li>
                       </ul>
@@ -67,6 +70,7 @@
                 application, integration and management of computing technologies within
                 an organization. 
             </p>
+            <br>
             <p>
                 (CHED Memo 25: Series 2015)
             </p>
@@ -252,7 +256,7 @@
         </div>
     </div>
 
-    <div class="equipment-facility">
+    <div class="equipment-facility" id="facility">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-6">
@@ -270,7 +274,7 @@
                           <div class="carousel-item active">
                             <img class="d-block w-100" src="img/computerlab.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Computer Laboratory</h5>
+                                <h5>Computer Laboratories</h5>
                                 
                               </div>
                           </div>
